--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
+    "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.1.91"
   }
 }
