--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "archiver": "^7.0.1",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
